<resources>
    <string name="app_name">BookLand</string>
    <string name="action_insert_default_book">Insert a default book</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book title</string>
    <string name="hint_price">Price</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="savingErrorToast">Error with saving a book</string>
    <string name="savedIdToast">Book successfully saved under #</string>
    <string name="toastErrorMessage">Title cannot be empty</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="supplierErrorMessage">Supplier Name cannot be empty</string>
    <string name="priceErrorMessage">Price cannot be empty</string>
    <string name="editor_activity_title_new_book">Add new book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="editor_update_book_failed">Book update has failed</string>
    <string name="editor_update_book_successful">Book has been updated</string>
    <string name="editor_save_book_failed">Book wasn\'t saved</string>
    <string name="editor_save_book_successful">Book was saved</string>
    <string name="unsaved_changes_dialog_msg">Discard all changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Yes, delete!</string>
    <string name="editor_delete_book_failed">Failed to delete the book</string>
    <string name="editor_delete_book_successful">Book was deleted</string>
    <string name="buy_button">Buy</string>
    <string name="empty_view_title_text">Start by adding a book</string>
    <string name="empty_view_subtitle_text">Click on the round button or insert a default book</string>
    <string name="delete_all_dialog_msg">Delete all books?</string>
    <string name="all_fields_required_msg">Please enter all information</string>
    <string name="one_is_left">Only 1 is left!</string>
    <string name="sold_out">Sold out!</string>
    <string name="in_stock">in stock</string>
    <string name="eur_currency">EUR</string>
    <string name="order_button">order</string>
    <string name="editor_activity_title_book_details">Book Details</string>
    <string name="price_error">Please enter a valid price</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="supplier_error">Supplier cannot be empty</string>
    <string name="phone_error">Phone cannot be emmpty</string>
</resources>
